--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "lib": [
       "es2019",
       "dom"
-    ]
+    ],
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": false
   }
 }
